updated index file

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,9 +20,9 @@
    * colors
    */
 
-  --safety-orange:#285430;
-  --lavender-gray: #E5D9B6;
-  --persian-rose:#A4BE7B ;
+  --safety-orange:#5F8D4E;
+  --lavender-gray: #5F8D4E;
+  --persian-rose:#5F8D4E ;
   --red-crayola: #5F8D4E;
   --eerie-black: hsl(240, 6%, 10%);
   --light-gray: hsl(0, 0%, 80%);
